--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@ img {
 <body><!-- ここからページに表示される内容ですよという宣言 -->
 	<script>
    	 if (confirm("極寿司炎のメンバーの方でしょうか？\n違う場合はキャンセルをお願いいたします．")) {
-		alert("おめでとうございます！強制参加になります．\n DMよりご連絡をお願いします！");
-		location.href = "https://twitter.com/sumeshi_wind?s=20";
+		//alert("おめでとうございます！強制参加になります．\n DMよりご連絡をお願いします！");
+		//location.href = "https://twitter.com/sumeshi_wind?s=20";
+		location.href = "https://ultrasushifire.com/";
 	
  	   } else {
    	   alert("大変失礼いたしました．\nこの先で企画概要ご確認ください");
@@ -95,8 +96,9 @@ img {
 
 	<h1>第三回酢飯wind合奏企画概要</h1>
 	<p>酢飯wind第三回の概要です！</p>
-	<a href="https://www.dropbox.com/s/d64l8wehdczw4ld/%E9%85%A2%E9%A3%AF%E5%B3%B60804.pdf?dl=0">企画概要はこちら</a><!-- リンクを表示　仮で宝島 -->	
-
+	<a href="https://drive.google.com/drive/folders/1Y7LzwKPURteXen6TsG_1lf0xSDbRiwXp">企画概要はこちら</a><!-- リンクを表示　 -->	
+	<a href="https://docs.google.com/forms/d/1EMGUK3A3IQy6QomiW1Fxag9Ndd0dHZkANPC9G0nBbPE/viewform?edit_requested=true">参加申し込みはこちら</a><!-- リンクを表示　 -->	
+	
 
 </body><!-- ここまでがページに表示される内容ですよという宣言 -->
 </html><!-- ここまでがHTMLですという終わりの宣言 -->
