--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@ img {
  	   } else {
    	   alert("大変失礼いたしました．\nこの先で企画概要ご確認ください");
   	  }
-	</script>
-
+	alert("これはテストです")；
+	</script>	
+	
 	<h1>第三回酢飯wind合奏企画概要</h1>
 	<p>酢飯wind第三回の概要です！</p>
 	<a href="https://drive.google.com/file/d/1Bav0CCr5tk5Tllvl3SMB0dirATyW_3aj/view?usp=sharing">企画概要はこちら</a><!-- リンクを表示　 -->	
