--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ img {
  	   } else {
    	   alert("大変失礼いたしました．\nこの先で企画概要ご確認ください");
   	  }
-	alert("これはテストです")；
+	alert("これはテストです");
 	</script>	
 	
 	<h1>第三回酢飯wind合奏企画概要</h1>
