--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@ img {
 </head><!-- ここまでがうらの設定ですよという宣言 -->
 <body><!-- ここからページに表示される内容ですよという宣言 -->
 	<script>
-   	 if (confirm("極寿司炎のメンバーの方でしょうか？\n違う場合はキャンセルをお願いいたします．")) {
+   	 if (confirm("極寿司炎のメンバーの方はOKを押してください．\n酢飯の方はキャンセルを押してください．．")) {
 		//alert("おめでとうございます！強制参加になります．\n DMよりご連絡をお願いします！");
 		//location.href = "https://twitter.com/sumeshi_wind?s=20";
 		location.href = "https://ultrasushifire.com/";
 	
  	   } else {
-   	   alert("大変失礼いたしました．\nこの先で企画概要ご確認ください");
+   	   alert("大変お手数をおかけいたしました．\nこの先で企画概要ご確認ください");
   	  }
 	//alert("これはテストです");
 	</script>	
