--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@ img {
 	<h1>第三回酢飯wind合奏企画概要</h1>
 	<p>酢飯wind第三回の概要です！</p>
 	<a href="https://drive.google.com/file/d/1G0RHa51s21o8AnCTEphlJevf72ZhTG4h/view?usp=sharing">企画概要はこちら</a><!-- リンクを表示　 -->	
-	<a href="https://docs.google.com/forms/d/1EMGUK3A3IQy6QomiW1Fxag9Ndd0dHZkANPC9G0nBbPE/viewform?edit_requested=true">参加申し込みはこちら</a><!-- リンクを表示　 -->	
-	
-	
+	<a href="https://docs.google.com/forms/d/1EMGUK3A3IQy6QomiW1Fxag9Ndd0dHZkANPC9G0nBbPE/viewform?edit_requested=true">参加申し込みはこちら</a><!-- リンクを表示　 -->
+	<p>以下参考音源暫定版，拡散はしないでください</p>	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ehAwA6Wtus4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 </body><!-- ここまでがページに表示される内容ですよという宣言 -->
 </html><!-- ここまでがHTMLですという終わりの宣言 -->
